<resources>
    <string name="action_add">Add</string>
    <string name="action_addall">Add all</string>
    <string name="action_addfromfile">From file</string>
    <string name="action_addfromurl">From URL</string>
    <string name="action_scanbarcode">Scan barcode</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rss">RSS</string>
    <string name="action_remoterss">Remote RSS</string>
    <string name="action_enableturtle">Enable turtle mode</string>
    <string name="action_disableturtle">Disable turtle mode</string>
    <string name="action_sort">Sort list</string>
    <string name="action_sort_alpha">Name</string>
    <string name="action_sort_status">Status</string>
    <string name="action_sort_done">Date done</string>
    <string name="action_sort_added">Date added</string>
    <string name="action_sort_seeders">Seeders</string>
    <string name="action_sort_percent">Percent downloaded</string>
    <string name="action_sort_downspeed">Download speed</string>
    <string name="action_sort_upspeed">Upload speed</string>
    <string name="action_sort_ratio">Ratio</string>
    <string name="action_sort_size">Size</string>
    <string name="action_filter">Filter list</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_start">Start</string>
    <string name="action_start_default">Normal start</string>
    <string name="action_start_forced">Force start</string>
    <string name="action_startall">Start all</string>
    <string name="action_stop">Stop</string>
    <string name="action_stopall">Stop all</string>
    <string name="action_resume">Resume</string>
    <string name="action_resumeall">Resume all</string>
    <string name="action_pause">Pause</string>
    <string name="action_pauseall">Pause all</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_default">Remove torrent</string>
    <string name="action_remove_withdata">Remove and delete data</string>
    <string name="action_setlabel">Set label</string>
    <string name="action_download_mode">Download mode</string>
    <string name="action_toggle_sequential">Download sequentially</string>
    <string name="action_toggle_firstlastpiece">Prioritize first and last piece</string>
    <string name="action_updatetrackers">Update trackers</string>
    <string name="action_changelocation">Change storage location</string>
    <string name="action_forcerecheck">Force data recheck</string>
    <string name="action_priority_off">Off</string>
    <string name="action_priority_low">Low</string>
    <string name="action_priority_normal">Normal</string>
    <string name="action_priority_high">High</string>
    <string name="action_remoteplay">Remote play in VLC</string>
    <string name="action_download">Download using FTP(S)</string>
    <string name="action_copytoclipboard">Copy to clipboard</string>
    <string name="action_showdetails">Show details</string>
    <string name="action_openwebsite">Open website</string>
    <string name="action_useassearch">Use as new search</string>
    <string name="action_removesettings">Remove settings</string>
    <string name="action_visitwebsite">Visit transdroid.org</string>
    <string name="action_close">Close</string>
    <string name="navigation_opendrawer">Select server and filter</string>
    <string name="navigation_closedrawer">Close filters list</string>
    <string name="navigation_nosettings">%1$s allows you to monitor and manage the torrent client you run at home or on your seedbox. Setting things up can be a bit tricky, but we offer step-by-step guides and promise it\'ll be worth it!</string>
    <string name="navigation_emptytorrents">Connected, but no torrents are active within the current filter</string>
    <string name="navigation_emptydetails">Select a torrent to view its details</string>
    <string name="navigation_servers">Servers</string>
    <string name="navigation_status">Status</string>
    <string name="navigation_labels">Labels</string>
    <string name="navigation_status_showall">All</string>
    <string name="navigation_status_onlydown">Downloading</string>
    <string name="navigation_status_onlyup">Seeding</string>
    <string name="navigation_status_onlyactive">Active</string>
    <string name="navigation_status_onlyinactive">Inactive</string>
    <plurals name="navigation_torrentsselected">
        <item quantity="one">%1$d torrent selected</item>
        <item quantity="other">%1$d torrents selected</item>
    </plurals>
    <plurals name="navigation_filesselected">
        <item quantity="one">%1$d files selected</item>
        <item quantity="other">%1$d files selected</item>
    </plurals>
    <string name="navigation_selectall">Select all</string>
    <string name="navigation_selectfinished">Select finished</string>
    <string name="navigation_invertselection">Invert selection</string>
    <string name="navigation_pickserver">Add torrent to&#8230;</string>
    <string name="navigation_url_hint" translatable="false">http://…</string>
    <string name="navigation_rss_tabs_local">Transdroid</string>
    <string name="navigation_rss_tabs_remote">Server</string>
    <string name="status_status">STATUS: %1$s</string>
    <string name="status_waiting">Waiting to check&#8230;</string>
    <string name="status_checking">Verifying local data&#8230;</string>
    <string name="status_waitingtodl">Waiting to download %s</string>
    <string name="status_error">Error&#8230;</string>
    <string name="status_size1">%1$s OF %2$s (%3$s)</string>
    <string name="status_size2">%1$s, UPLOADED %2$s</string>
    <string name="status_sincedate">SINCE %1$s</string>
    <string name="status_eta">~ %1$s</string>
    <string name="status_etalong">ETA %1$s</string>
    <string name="status_ofsize">OF %1$s</string>
    <string name="status_unknowneta">UNKNOWN ETA</string>
    <string name="status_ratio">RATIO %1$s</string>
    <string name="status_seeders">%1$s OF %2$s SEEDERS</string>
    <string name="status_leechers">%1$s OF %2$s LEECHERS</string>
    <string name="status_speed_up" translatable="false">↑ %1$s</string>
    <string name="status_speed_down" translatable="false">↓ %1$s</string>
    <string name="status_speed_down_details" translatable="false">%1$s ↓</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_seeding">Seeding</string>
    <string name="status_paused">Paused</string>
    <string name="status_queued">Queued</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_unknown">Unknown status</string>
    <string name="status_priority_off">Not downloaded</string>
    <string name="status_priority_low">Low priority</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_optional">Optional personal name</string>
    <string name="pref_feedurl">Feed URL</string>
    <string name="pref_reqauth">Requires authentication</string>
    <string name="pref_reqauth_info">Opens links in the webbrowser for user login</string>
    <string name="pref_alarmrssnew">New item notification</string>
    <string name="pref_alarmrssnew_info">Notify when new torrents are released</string>
    <string name="pref_alarmrssexclude">Exclude filter</string>
    <string name="pref_alarmrssexclude_info">Don\'t show torrents whose name matches these |-separated words</string>
    <string name="pref_alarmrssinclude">Include filter</string>
    <string name="pref_alarmrssinclude_info">Only show torrents whose name matches these |-separated words</string>
    <string name="pref_servertype">Server type</string>
    <string name="pref_address">IP or host name</string>
    <string name="pref_port">Port number</string>
    <string name="pref_user">User name</string>
    <string name="pref_pass">Password</string>
    <string name="pref_extrapassword">Deluge web password</string>
    <string name="pref_advanced">Advanced settings</string>
    <string name="pref_localaddress">Local IP or host</string>
    <string name="pref_localaddress_info">When connected to the specified local network</string>
    <string name="pref_localport">Local port number</string>
    <string name="pref_localnetwork">Local network</string>
    <string name="pref_localnetwork_info">The server\'s local network SSID</string>
    <string name="pref_folder">Folder</string>
    <string name="pref_folder_info">Usually empty</string>
    <string name="pref_optional">Optional settings</string>
    <string name="pref_alarmdone">Finished notification</string>
    <string name="pref_alarmdone_info">Notify when a torrent finishes</string>
    <string name="pref_alarmnew">New torrent notification</string>
    <string name="pref_alarmnew_info">Notify when a torrent was added</string>
    <string name="pref_alarmexclude">Exclude filter</string>
    <string name="pref_alarmexclude_info">Notify only if torrent name matches these |-separated words</string>
    <string name="pref_alarminclude">Include filter</string>
    <string name="pref_alarminclude_info">Notify never if torrent name matches these |-separated words</string>
    <string name="pref_os">Server OS</string>
    <string name="pref_downdir">Download directory</string>
    <string name="pref_downdir_info">Manually set absolute path for remote connections</string>
    <string name="pref_timeout">Connection timeout</string>
    <string name="pref_timeout_info">Number of seconds before a connection attempt is aborted</string>
    <string name="pref_ftpurl">Base FTP(S) url</string>
    <string name="pref_ftpurl_info">For example ftp://me@server/downloads/</string>
    <string name="pref_ftppass">FTP(S) password</string>
    <string name="pref_disableauth">Disable authentication</string>
    <string name="pref_disableauth_info">Don\'t send username and password</string>
    <string name="pref_sslenable">Use SSL</string>
    <string name="pref_sslenable_info">Connect using https</string>
    <string name="pref_local_sslenable">Use SSL on local network</string>
    <string name="pref_local_sslenable_info">Connect using https</string>
    <string name="pref_sslkey">Custom SSL thumbprint (SHA-1)</string>
    <string name="pref_sslkey_info">Permit only connections to this specific certificate</string>
    <string name="pref_sslacceptall">Accept all SSL certificates</string>
    <string name="pref_sslacceptall_info">Allow all connections from any thumbprint</string>
    <string name="pref_autorefresh">Automatic refreshing</string>
    <string name="pref_autorefresh_info">Interval-based refresh of the main screen</string>
    <string name="pref_dormantasinactive">Treat dormant torrents as inactive</string>
    <string name="pref_dormantasinactive_info">Torrents at 0KB/s (no data transfer) will be filtered as being inactive</string>
    <string name="pref_checkupdates">Check for updates</string>
    <string name="pref_checkupdates_info">Check transdroid.org for latest app version</string>
    <string name="pref_autodarktheme">Auto night mode</string>
    <string name="pref_autodarktheme_info">Automatically choose between light or dark theme</string>
    <string name="pref_usedarktheme">Use dark UI theme</string>
    <string name="pref_usedarktheme_info">Requires a restart to take effect</string>
    <string name="pref_clearsearch">Clear search history</string>
    <string name="pref_import">Import settings</string>
    <string name="pref_export">Export settings</string>
    <string name="pref_seedbox_client">Torrent client</string>
    <string name="pref_seedbox_client_info">Client to connect to</string>
    <string name="pref_seedbox_server">Server address</string>
    <string name="pref_seedbox_xirvikhint">Like eplus001.xirvik.com</string>
    <string name="pref_seedbox_dediseedboxhint">Like abcd123.dediseedbox.com</string>
</resources>