<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010-2013 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<EditTextPreference
		android:key="seedbox_dediseedbox_name"
		android:title="@string/pref_name"
		android:summary="@string/pref_name_optional"
		android:inputType="textNoSuggestions" />
	<EditTextPreference
		android:key="seedbox_dediseedbox_server"
		android:title="@string/pref_seedbox_server"
		android:summary="@string/pref_seedbox_dediseedboxhint"
		android:inputType="textUri" />
	<EditTextPreference
		android:key="seedbox_dediseedbox_user"
		android:title="@string/pref_user"
		android:inputType="textNoSuggestions" />
	<EditTextPreference
		android:key="seedbox_dediseedbox_pass"
		android:title="@string/pref_pass"
		android:inputType="textPassword" />

	<PreferenceScreen android:title="@string/pref_optional" >
		<CheckBoxPreference
			android:key="seedbox_dediseedbox_alarmfinished"
			android:title="@string/pref_alarmdone"
			android:summary="@string/pref_alarmdone_info"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:key="seedbox_dediseedbox_alarmnew"
			android:title="@string/pref_alarmnew"
			android:summary="@string/pref_alarmnew_info"
			android:defaultValue="false" />
		<EditTextPreference
			android:key="seedbox_dediseedbox_alarmexclude"
			android:title="@string/pref_alarmexclude"
			android:summary="@string/pref_alarmexclude_info"
			android:inputType="textFilter" />
		<EditTextPreference
			android:key="seedbox_dediseedbox_alarminclude"
			android:title="@string/pref_alarminclude"
			android:summary="@string/pref_alarminclude_info"
			android:inputType="textFilter" />
	</PreferenceScreen>

</PreferenceScreen>
