<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2010-2018 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="seedbox_seedstuff_name"
        android:summary="@string/pref_name_optional"
        android:title="@string/pref_name"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:inputType="textUri"
        android:key="seedbox_seedstuff_server"
        android:summary="@string/pref_seedbox_seedstuffhint"
        android:title="@string/pref_seedbox_server"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="seedbox_seedstuff_user"
        android:title="@string/pref_user"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="seedbox_seedstuff_pass"
        android:title="@string/pref_pass"
        app:iconSpaceReserved="false" />

    <PreferenceScreen
        android:title="@string/pref_optional"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="seedbox_seedstuff_alarmfinished"
            android:summary="@string/pref_alarmdone_info"
            android:title="@string/pref_alarmdone"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="seedbox_seedstuff_alarmnew"
            android:summary="@string/pref_alarmnew_info"
            android:title="@string/pref_alarmnew"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:inputType="textFilter"
            android:key="seedbox_seedstuff_alarmexclude"
            android:summary="@string/pref_alarmexclude_info"
            android:title="@string/pref_alarmexclude"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:inputType="textFilter"
            android:key="seedbox_seedstuff_alarminclude"
            android:summary="@string/pref_alarminclude_info"
            android:title="@string/pref_alarminclude"
            app:iconSpaceReserved="false" />
    </PreferenceScreen>

</PreferenceScreen>
