<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2010-2024 Eric Kok et al.

  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="system_dormantasinactive"
        android:summary="@string/pref_dormantasinactive_info"
        android:title="@string/pref_dormantasinactive"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_autorefresh_intervals"
        android:entryValues="@array/pref_autorefresh_intervalvalues"
        android:key="system_autorefresh"
        android:summary="@string/pref_autorefresh_info"
        android:title="@string/pref_autorefresh"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="system_autodarktheme"
        android:summary="@string/pref_autodarktheme_info"
        android:title="@string/pref_autodarktheme"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="system_autodarktheme"
        android:key="system_usedarktheme"
        android:summary="@string/pref_usedarktheme_info"
        android:title="@string/pref_usedarktheme"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="system_checkupdates"
        android:summary="@string/pref_checkupdates_info"
        android:title="@string/pref_checkupdates"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="system_clearsearch"
        android:title="@string/pref_clearsearch"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="system_importsettings"
        android:title="@string/pref_import"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="system_exportsettings"
        android:title="@string/pref_export"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
