<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2010-2018 Eric Kok et al.
  
  Transdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Transdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Transdroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="rssfeed_name"
        android:summary="@string/pref_name_optional"
        android:title="@string/pref_name"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textUri"
        android:key="rssfeed_url"
        android:title="@string/pref_feedurl"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="rssfeed_reqauth"
        android:summary="@string/pref_reqauth_info"
        android:title="@string/pref_reqauth"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="rssfeed_alarmnew"
        android:summary="@string/pref_alarmrssnew_info"
        android:title="@string/pref_alarmrssnew"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textFilter"
        android:key="rssfeed_exclude"
        android:summary="@string/pref_alarmrssexclude_info"
        android:title="@string/pref_alarmrssexclude"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textFilter"
        android:key="rssfeed_include"
        android:summary="@string/pref_alarmrssinclude_info"
        android:title="@string/pref_alarmrssinclude"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
